[package]
# TODO rename
name                  = "balancer"
version.workspace     = true
authors.workspace     = true
description.workspace = true
edition               = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export  = []
boot    = ["export", "boot-core"]

[dependencies]
cosmwasm-std = { version = "1.1" }
abstract-core = { git = "https://github.com/AbstractSDK/contracts.git"}
abstract-sdk = { git = "https://github.com/AbstractSDK/contracts.git"}
cw-asset = {version = "3.0.0"}
cw-controllers = { version = "1.0.1" }
cosmwasm-schema = { version = "1.1" }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
semver = "1.0.0"
lazy_static = "1.4.0"
abstract-app = { git = "https://github.com/AbstractSDK/contracts.git" }
schemars        = "0.8.12"
dex             = { git = "https://github.com/AbstractSDK/apis.git" }
boot-core       = { version = "0.9.0", optional = true }

[dev-dependencies]
balancer ={ path = ".", features = ["boot"]}
boot-core = { version = "0.9.0", features = ["daemon"]}
boot-cw-plus = "0.8.0"
abstract-boot = {git = "https://github.com/AbstractSDK/contracts.git"}
log = "0.4.14"
cosmwasm-std = { version = "1.1" }
anyhow = "1.0"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
semver = { version = "1.0.13", default-features = false }
tokio = {version = "*", features = ["full"] }
